syntax = "proto3";

package common.base;

import "common/enumeration.proto";

option java_multiple_files = false;
option java_package = "com.cmcc.littlec.proto.common";
option java_outer_classname = "Base";

//终端设备详情
message MobileBase
{
    string sdk_version = 1; // sdk 版本号
	common.enumeration.ELanguageType language_type = 2; // 语言类型
	common.enumeration.ENetworkType net_type = 3; // 网络类型
    string os_version = 4; //操作系统版本
	common.enumeration.EClientType client_type = 5; // 操作系统类型(必填)
    string device = 6; // 设备型号
    string imei = 7; // 国际移动设备识别码
    string device_id = 8;// 设备sn号(必填)
    common.enumeration.ETerminalDeviceType terminal_device_type = 9; // 终端设备类型(必填)
}
